# msfvenomGUI

./: README.md  design.txt  pyproject.toml
msfvenomgui/: command_builder.py  gui.py  main.py
tests/: stub_test.py
