[tool.poetry]
name = "msfvenomgui"
version = "0.2.0"
description = "msfvenomgui provides a graphical UI over Metasploit's msfvenom tool."
authors = ["bluesentinelsec <bluesentinel@protonmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.scripts]
msfvenomgui = "msfvenomgui.main:main"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
